cmake_minimum_required(VERSION 3.16)

project(Chip8_Interpreter VERSION 1.0.0.1)
set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_CXX_FLAGS "-g3 -Wall")
include_directories(${CMAKE_SOURCE_DIR}/include)
set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose Release or Debug" FORCE)
endif()
add_executable(${CMAKE_PROJECT_NAME} src/main.cpp src/chip8.cpp)

include(FetchContent)
if(MSVC)
    set(SFML_URL "https://github.com/SFML/SFML/releases/download/2.5.1/SFML-2.5.1-windows-vc15-64-bit.zip" CACHE STRING "" FORCE)
elseif(UNIX)
    set(SFML_URL "https://github.com/SFML/SFML/releases/download/2.5.1/SFML-2.5.1-linux-gcc-64-bit.tar.gz" CACHE STRING "" FORCE)
endif()
include(${CMAKE_SOURCE_DIR}/extern/SFML_install.cmake)
